--- a/config/.env
+++ b/config/.env
@@ -10,7 +10,10 @@ emailToken=c38Sat1231
 tokenSignature=c38Sat1321
 BearerKey=Bearer__
 nodeMailerEmail=ziadalattar22@gmail.com
-nodeMailerPassword=ctyzesuakndbztfw
+nodeMailerPassword=ctyzesuakndbztfw.
+
+
+# cloudinary
 cloud_name=dqaf8jxn5
 api_key=614767185252893
 api_secret=vcE5mtYdDUEjSKhbqqoxc5K_8ng
